# Aimit

./: Cargo.toml  Config.toml  README.md  config.toml  install_aimit.sh
.github/workflows/: build.yml
src/: main.rs
src/cli/: args.rs
src/config/: settings.rs
src/error/: error.rs
src/git/: diff.rs
src/models/: gemini.rs  mod.rs  model.rs
