[package]
name = "Aimit"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aimit"
path = "src/main.rs"

[dependencies]
git2 = "0.20.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.6"
dirs = "6.0.0"
toml = "0.8.19"
