[package]
name = "Aimit"
version = "1.0.1"
edition = "2021"

[[bin]]
name = "aimit"
path = "src/main.rs"

[dependencies]
git2 = "0.20.0"
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15.6"
dirs = "6.0.0"
toml = "0.8.19"
clap = { version = "4.5.27", features = ["derive"] }
dialoguer = "0.11.0"
strum = "0.26.3"
strum_macros = "0.26.4"
home = "0.5.11"
semver = "1.0.25"
